--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,19 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+ 
+ .th {
+  padding: 50px;
+ }
+ 
+ .table {
+  padding: 20px;
+ }
+ h1 {
+  color: 'green';
+ }
+ 
+ .container {
+  margin: 30px;
+  padding: 30px;
+ }
