--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<h1>This is the home of Healthy food of Rockies</h1>
 <h1>Listing Users</h1>
 
 <table>
@@ -12,7 +12,6 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @users.each do |user| %>
       <tr>
